<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".SigninActivity">


    <GridLayout
        android:id="@+id/authGridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="50dp"
        android:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline">


        <androidx.cardview.widget.CardView
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:cardCornerRadius="30dp">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:autofillHints="@string/enteremail"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:gravity="center|start"
                android:padding="10dp"
                android:hint="@string/enteremail"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:cardCornerRadius="30dp">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:gravity="start|center"
                android:autofillHints="@string/enterpassword"
                android:background="@color/white"
                android:hint="@string/enterpassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_columnSpan="2"
            android:text="@string/passwordConstraint"
            android:textSize="12sp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"/>
        <TextView
            android:id="@+id/forgotpasswordTextView"
            android:textSize="14sp"
            android:text="@string/forgotpassword"
            android:layout_gravity="end"
            android:layout_columnSpan="2"
            android:layout_margin="10dp"
            android:focusable="true"
            android:textColor="@color/teal_700"/>

        <androidx.cardview.widget.CardView
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="50dp">

            <Button
                android:id="@+id/createaccountButton"
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:background="#64DD17"
                android:focusable="true"
                android:longClickable="true"
                android:text="@string/createaccount" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="50dp">

            <Button
                android:id="@+id/signinButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#64DD17"
                android:focusable="true"
                android:longClickable="true"
                android:text="@string/signin" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:text="@string/or"
            android:textColor="@color/teal_700"
            android:textSize="20sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googlesigninButton"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:layout_margin="20dp"
            android:focusable="true"
            />

    </GridLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/authGridLayout"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />



</androidx.constraintlayout.widget.ConstraintLayout>